# multicopter_design

./: .gitmodules  CMakeLists.txt  README.md  linux_setup.sh  macos_setup.sh  windows_setup.ps1
docs/: .gitignore  acknowledgment.tex  file_format.tex  installation.tex  introduction.tex  user_guide.bib  user_guide.tex  user_interface.tex
projects/copter_simulation/: CMakeLists.txt
projects/copter_simulation/include/: battery.h  constraint.h  controller.h  copter.h  copter_designer.h  copter_simulation.h  design_problem.h  inertial_sensor.h  lqr_controller.h  nlopt_function.h  nlopt_linear_function.h  nlopt_wrapper.h  parametric_connector.h  parametrized_connector.h  parametrized_rotor.h  parametrized_shape.h  parametrized_tube.h  pid_controller.h  rigid_body.h  rotor.h  tri_mesh.h  tri_rigid_body.h  tri_rigid_body_union.h
projects/copter_simulation/src/: constraint.cpp  controller.cpp  copter.cpp  copter_designer.cpp  design_problem.cpp  inertia_sensor.cpp  lqr_controller.cpp  nlopt_function.cpp  nlopt_linear_function.cpp  nlopt_wrapper.cpp  parametric_connector.cpp  parametrized_connector.cpp  parametrized_rotor.cpp  parametrized_shape.cpp  parmetrized_tube.cpp  pid_controller.cpp  rigid_body.cpp  rotor.cpp  tri_mesh.cpp  tri_rigid_body.cpp  tri_rigid_body_union.cpp
projects/copter_viewer/: CMakeLists.txt
projects/copter_viewer/include/: copter_animator.h  copter_imgui_wrapper.h  copter_viewer.h  copter_viewer_keyboard_handler.h  copter_viewer_timer.h  flight_target_animator.h  light_animator.h
projects/copter_viewer/src/: copter_animator.cpp  copter_imgui_wrapper.cpp  copter_viewer.cpp  copter_viewer_keyboard_handler.cpp  copter_viewer_timer.cpp  flight_target_animator.cpp  light_animator.cpp  main.cpp
resources/copter/: demo.xml  pentacopter.xml  quadcopter.xml  vtailcopter.xml  y6copter.xml
resources/measurement/: motor_10inch_prop.txt  motor_14inch_prop.txt  readme.txt
